api: repos/search: add parameters to control the sort order
The backend SearchRepositoryByName function supports several sort order
options, hook these up to the /repos/search API.

New parameters for /repos/search:
    'sort':  alpha, created, updated, size, or id
    'order': 0 for ascending or 1 for descending

'order' defaults to ascending, and is only used when 'sort' is also specified.
The overall default behavior is unchanged (alphabetically ascending).
