# public/swagger.v1.json
@@ -915,6 +915,18 @@
             "description": "if `uid` is given, search only for repos that the user owns",
             "name": "exclusive",
             "in": "query"
+          },
+          {
+            "type": "string",
+            "description": "sort repos by attribute. Supported values are \"alpha\", \"created\", \"updated\", \"size\", and \"id\". Default is \"alpha\"",
+            "name": "sort",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "description": "sort order. 0 for ascending, 1 for descending. Default is ascending",
+            "name": "order",
+            "in": "query"
           }
         ],
         "responses": {
